# air-pollution

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  README.md  config.yaml  docker-compose.yml  main.py  package-lock.json  package.json  requirements-docker.txt  requirements.txt
.agent-loop/: config.yaml
agentic/: README.md
air_quality_mvp/: GETTING_STARTED.md  README.md
airos/: __init__.py
docs/: AGENCY_DEMO_SCRIPT.md  AGENCY_NODE_MODEL.md  AGENTS.md  AIR_OS_ARCHITECTURE_OVERVIEW.md  AIR_OS_VISION.md  AI_COE_OPERATING_STRATEGY.md  BEGINNER_DEVELOPER_GUIDE.md  CITY_PROFILE_TEMPLATE.md  CONTAINERIZED_DEPLOYMENT_ARCHITECTURE.md  CORE_API_PILOT.md  DATA_CATALOG.md  DATA_SOURCE_CATALOG.md  DEPLOYMENT_QUICKSTART.md  DEVELOPER_GUIDE.md  DOCKER_COMPOSE_PILOT_RUNTIME.md  DOCKER_COMPOSE_POC.md  DOCKER_DEPLOYMENT.md  DOMAIN_DEVELOPMENT_PLAYBOOK.md  EVIDENCE_BUNDLES.md  EXECUTION_TRACKER.md  FEDERATED_DEPLOYMENT_ARCHITECTURE.md  INTEROPERABILITY_MODEL.md  PILOT_RUNTIME_QUICKSTART.md  PILOT_STORE_RESTORE_DESIGN.md  PLUGIN_AND_REGISTRY_ARCHITECTURE.md  PRODUCTION_LIKE_AIR_OS_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCT_MODEL.md  PROGRAM_REPORTING_AND_FUND_RELEASE.md  PROGRAM_REPORTING_SDK_WALKTHROUGH.md  PROJECT_STATUS.md  REPO_RESTRUCTURING_PLAN.md  SIGNED_EVIDENCE_BUNDLES_DESIGN.md  SPECS_FIRST_APPROACH.md  START_HERE.md  (+4 more)
tools/driver-template/: pyproject.toml
tools/driver-template/src/airos_driver_template/: driver.py
tools/driver-template/src/airos_driver_template/tests/: test_conformance.py
(+922 files in other folders)
