[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "airos-driver-template"
version = "0.1.0"
description = "AirOS data source driver — replace this description"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["airos", "urban-intelligence", "driver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
]

# Declare AirOS Core as a dependency. Pin to the version range you tested against.
dependencies = [
    "airos-core>=1.0,<2.0",    # replace with actual package name when published
    # add your own upstream API client here:
    # "requests>=2.28",
]

# THIS IS THE KEY LINE — it registers your driver with AirOS.
# The entry point name is the domain identifier (must be unique in the deployment).
# The value is "module.path:ClassName".
[project.entry-points."airos.drivers"]
template_domain = "airos_driver_template.driver:TemplateDriver"

[tool.setuptools.packages.find]
where = ["src"]
